titulo Comunitat Valenciana

--- a/index_vlc.html
+++ b/index_vlc.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/jpg" href="./img/logoSkills.png" />
   <link rel="stylesheet" href="./css/styles.css" />
 
-  <title>Web Skills CV</title>
+  <title>Skills Comunitat Valenciana</title>
 </head>
 
 <title>Web Skills CV</title>
