--- a/especialidades/administracion_sistemas_red_vlc.html
+++ b/especialidades/administracion_sistemas_red_vlc.html
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="name">JOSÉ FEDERICO MUÑOZ</p>
-                                    <p class="card_instituto">IES PORÇONS</p>
+                                    <p class="card_instituto">CIPFP BATOI</p>
                                     <p class="description">
                                         Vols saber més?
                                     </p>
