--- a/especialidades/administracion_sistemas_red.html
+++ b/especialidades/administracion_sistemas_red.html
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="name">JOSÉ FEDERICO MUÑOZ</p>
-                                    <p class="card_instituto">IES PORÇONS</p>
+                                    <p class="card_instituto">CIPFP BATOI</p>
                                     <p class="description">
                                         ¿Quieres saber más?
                                     </p>
