--- a/especialidades/administracion_sistemas_red_vlc.html
+++ b/especialidades/administracion_sistemas_red_vlc.html
@@ -127,14 +127,14 @@
                         </div>
                         <div class="card-body">
                             <p class="name">JOSÉ FEDERICO MUÑOZ</p>
-                            <p class="card_instituto">IES PORÇONS</p>
+                            <p class="card_instituto">CIPFP BATOI</p>
                             <p class="description">
                                 Vols saber més?
                             </p>
                             <p class="description">Posa't en contacte amb <b>José,</b> el coordinador tècnic del skill de
                                 <b>TIC&nbsp;Administración&nbsp;de Sistemes&nbsp;en&nbsp;Xarxa</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jf.munozrubio@edu.gva.es" class="mail">jf.munozrubio@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
@@ -144,12 +144,7 @@
                 </div>
             </div>
             <div class="position-profesional2">
-                <!-- <p class="text subtitulo">¿Le gustaría saber más?</p>
-          <ul class="text text-padding">
-            <li class="lista-li"><b>No dude en contactar con nuestro experto.</b></li>
-            <li class="lista-li">Lorenzo@fpmislata.com</li>
-            <img width="100px" height="100px" src="./user.svg" alt="gato" />
-          </ul> -->
+
             </div>
             </div>
         </section>
