--- a/especialidades/atencion_sociosanitaria_vlc.html
+++ b/especialidades/atencion_sociosanitaria_vlc.html
@@ -135,7 +135,7 @@
                                 Posa't en contacte amb <b>Lucía,</b> la coordinadora tècnica del skill de
                                 <b>Atenció&nbsp;sociosanitària</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.lunaherrero@edu.gva.es" class="mail">l.lunaherrero@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
