--- a/especialidades/carpinteria.html
+++ b/especialidades/carpinteria.html
@@ -138,7 +138,7 @@
                                 Ponte en contacto con <b>Ricardo,</b> el coordinador técnico del skill de
                                 <b>Carpintería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.arnaujulia@edu.gva.es" class="mail">r.arnaujulia@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
