--- a/especialidades/cnc_fresado.html
+++ b/especialidades/cnc_fresado.html
@@ -78,7 +78,7 @@
                                     <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                                 </div>
                                 <div class="card-body">
-                                    <p class="name">Alfonso Bolumar</p>
+                                    <p class="name">ALFONSO BOLUMAR</p>
                                     <p class="card_instituto">IES MOLÍ DEL SOL</p>
                                     <p class="description">¿Quieres saber más?</p>
                                     <p class="description">
@@ -126,14 +126,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">SALVADOR MUÑOZ DOMENECH</p>
+                            <p class="name">ALFONSO BOLUMAR</p>
                             <p class="card_instituto">IES MOLÍ DEL SOL</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
                                 Ponte en contacto con <b>Salvador,</b> el coordinador técnico del skill de
                                 <b>CNC&nbsp;-&nbsp;Fresado</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:a.bolumarferrando@edu.gva.es" class="mail">a.bolumarferrando@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
