--- a/especialidades/cnc_fresado_vlc.html
+++ b/especialidades/cnc_fresado_vlc.html
@@ -129,14 +129,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">SALVADOR MUÑOZ DOMENECH</p>
+                            <p class="name">ALFONSO BOLUMAR</p>
                             <p class="card_instituto">IES MOLÍ DEL SOL</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Salvador,</b> el coordinador tècnic del skill de
+                                Posa't en contacte amb <b>Alfonso,</b> el coordinador tècnic del skill de
                                 <b>CNC&nbsp;-&nbsp;Fresat</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:a.bolumarferrando@edu.gva.es" class="mail">a.bolumarferrando@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
