--- a/especialidades/control_industrial.html
+++ b/especialidades/control_industrial.html
@@ -143,7 +143,7 @@
                                 Ponte en contacto con <b>María,</b> la coordinadora técnica del skill de
                                 <b>Control Industrial</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:mc.perezcabezas@edu.gva.es" class="mail">mc.perezcabezas@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
