--- a/especialidades/control_industrial_vlc.html
+++ b/especialidades/control_industrial_vlc.html
@@ -141,7 +141,7 @@
                                 Posa't en contacte amb <b>María,</b> la coordinadora tècnica del skill de
                                 <b>Control Industrial</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:mc.perezcabezas@edu.gva.es" class="mail">mc.perezcabezas@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
