--- a/especialidades/desarrollo_web.html
+++ b/especialidades/desarrollo_web.html
@@ -145,7 +145,7 @@
                                 Ponte en contacto con <b>Lorenzo,</b> el coordinador técnico del skill de
                                 <b>Desarrollo&nbsp;Web</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.gonzalezgascon@edu.gva.es" class="mail">l.gonzalezgascon@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
