--- a/especialidades/disenyo_animacion_juegos_vlc.html
+++ b/especialidades/disenyo_animacion_juegos_vlc.html
@@ -128,14 +128,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">ANTONIO JOSÉ</p>
+                            <p class="name">TONI BALANZÁ</p>
                             <p class="card_instituto">IES HENRI MATISSE</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Antonio,</b> el coordinador tècnic del skill de
+                                Posa't en contacte amb <b>Toni,</b> el coordinador tècnic del skill de
                                 <b>Disseny&nbsp;i&nbsp;Animacions de&nbsp;Jocs&nbsp;3D</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:aj.balanzalliso@edu.gva.es" class="mail">aj.balanzalliso@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
