--- a/especialidades/disenyo_mecanico.html
+++ b/especialidades/disenyo_mecanico.html
@@ -160,14 +160,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">MARÍA DOLORES QUILES y SERGIO GADEA</p>
-                            <p class="card_instituto">IES FEDERICA MONTSENY</p>
+                            <p class="name">JOSÉ LUIS DOMÉNECH</p>
+                            <p class="card_instituto">IES POLITÈCNIC</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>María y Sergio,</b> los coordinadores técnicos del skill de
+                                Ponte en contacto con <b>José Luis,</b> los coordinadores técnicos del skill de
                                 <b>Diseño Mecánico-CAD</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jl.domenechpenel@edu.gva.es" class="mail">jl.domenechpenel@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
