--- a/especialidades/disenyo_mecanico_vlc.html
+++ b/especialidades/disenyo_mecanico_vlc.html
@@ -161,14 +161,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">MARÍA DOLORES QUILES y SERGIO GADEA</p>
-                            <p class="card_instituto">IES FEDERICA MONTSENY</p>
+                            <p class="name">JOSÉ LUIS DOMÉNECH</p>
+                            <p class="card_instituto">IES POLITÈCNIC</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>María y Sergio,</b> els coordinadors tècnics del skill de
+                                Posa't en contacte amb <b>José Luis,</b> els coordinadors tècnics del skill de
                                 <b>Disseny Mecànic-CAD </b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jl.domenechpenel@edu.gva.es" class="mail">jl.domenechpenel@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
