--- a/especialidades/ebanisteria_vlc.html
+++ b/especialidades/ebanisteria_vlc.html
@@ -129,13 +129,13 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">VICENTE ABAD</p>
-                            <p class="card_instituto">IES POLITÈCNIC</p>
+                            <p class="name">ELOY AGUILAR</p>
+                            <p class="card_instituto">IES JAUME I</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Vicente,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
+                                Posa't en contacte amb <b>Eloy,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
