--- a/especialidades/electronica_vlc.html
+++ b/especialidades/electronica_vlc.html
@@ -146,7 +146,7 @@
                                 Posa't en contacte amb <b>Fulgencio,</b> el coordinador tècnic del skill de
                                 <b>Electrònica</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:f.bermejonavarro@edu.gva.es" class="mail">f.bermejonavarro@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
