--- a/especialidades/flosristeria_vlc.html
+++ b/especialidades/flosristeria_vlc.html
@@ -135,7 +135,7 @@
                                 Posa't en contacte amb <b>Lourdes,</b> el coordinadora tècnica del skill de
                                 <b>Floristeria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.mirallesbellver2@edu.gva.es" class="mail">l.mirallesbellver2@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
