--- a/especialidades/fontaneria_calefaccion_vlc.html
+++ b/especialidades/fontaneria_calefaccion_vlc.html
@@ -152,7 +152,7 @@
                                 Posa't en contacte amb el coordinador <b>Camilo,</b> tècnic del skill de
                                 <b>Llanterneria&nbsp;i&nbsp;calefacción</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:c.gisbertgarcia@edu.gva.es" class="mail">c.gisbertgarcia@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
