--- a/especialidades/instalaciones_electricas.html
+++ b/especialidades/instalaciones_electricas.html
@@ -137,7 +137,7 @@
                                 Ponte en contacto con <b>Jose,</b> el coordinador técnico del skill de
                                 <b>Instalaciones&nbsp;Eléctricas</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.monteagudofajard@edu.gva.es" class="mail">j.monteagudofajard@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
