--- a/especialidades/panaderia_pasteleria.html
+++ b/especialidades/panaderia_pasteleria.html
@@ -133,7 +133,7 @@
                                 Ponte en contacto con <b>Juan&nbsp;Jóse,</b> el coordinador técnico del skill de
                                 <b>Panadería&nbsp;y&nbsp;pastelería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
