--- a/especialidades/panaderia_pasteleria_vlc.html
+++ b/especialidades/panaderia_pasteleria_vlc.html
@@ -131,7 +131,7 @@
                                 Posa't en contacte amb <b>Juan&nbsp;Jóse,</b> el coordinador tècnic del skill de
                                 <b>Fleca&nbsp;i&nbsp;pastisseria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
