--- a/especialidades/peluqueria_vlc.html
+++ b/especialidades/peluqueria_vlc.html
@@ -129,10 +129,10 @@
                             <p class="card_instituto">IES EL CABANYAL</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Rafaela,</b> la coordinadora tècnica del skill de
+                                Posa't en contacte amb <b>Rafi,</b> la coordinadora tècnica del skill de
                                 <b>Perruqueria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.ferrermarquez@edu.gva.es" class="mail">r.ferrermarquez@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
