--- a/especialidades/pintura_automovil_vlc.html
+++ b/especialidades/pintura_automovil_vlc.html
@@ -120,15 +120,15 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">IGNASI-ENRIC MORANT<br>JUAN BORJA</p>
+                            <p class="name">JUAN BORJA</p>
                             <p class="card_instituto">CIPFP LA COSTERA</p>
                             <p class="description">
                                 Vols saber més?
                             </p>
-                            <p class="description">Posa't en contacte amb <b>Ignasi-Enric i Juan,</b> els coordinadors tècnics del skill de
+                            <p class="description">Posa't en contacte amb <b>Juan,</b> els coordinadors tècnics del skill de
                                 <b>Pintura&nbsp;de&nbsp;l'Automòbil</b></b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.borjaordinaga@edu.gva.es" class="mail">j.borjaordinaga@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
