--- a/especialidades/reparacion_carroceria.html
+++ b/especialidades/reparacion_carroceria.html
@@ -129,7 +129,7 @@
                             <p class="description">Ponte en contacto con <b>Alfredo,</b> el coordinador técnico del skill de
                                 <b>Reparación&nbsp;de&nbsp;Carrocería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:a.fuertesmarin@edu.gva.es" class="mail">a.fuertesmarin@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
