--- a/especialidades/reparacion_carroceria_vlc.html
+++ b/especialidades/reparacion_carroceria_vlc.html
@@ -128,7 +128,7 @@
                             <p class="description">Posa't en contacte amb <b>Alfredo,</b> el coordinador tècnic del skill de
                                 <b>Reparació&nbsp;de&nbsp;Carrosseria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:a.fuertesmarin@edu.gva.es" class="mail">a.fuertesmarin@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
