--- a/especialidades/tecnologia_automovil.html
+++ b/especialidades/tecnologia_automovil.html
@@ -131,7 +131,7 @@
                             <p class="description">Ponte en contacto con <b>Susana,</b> la coordinadora técnica del skill de
                                 <b>Tecnología&nbsp;del&nbsp;Automóvil</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:s.domenechmartinez@edu.gva.es" class="mail">s.domenechmartinez@edu.gva.es</a>
                         </div>
                         <div class="card-footer">
                             <p class="count"></p>
