--- a/especialidades/tecnologia_automovil_vlc.html
+++ b/especialidades/tecnologia_automovil_vlc.html
@@ -128,7 +128,7 @@
                             <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
                                 <b>Reparació&nbsp;de&nbsp;Carrosseria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:s.domenechmartinez@edu.gva.es" class="mail">s.domenechmartinez@edu.gva.es</a>
                         </div>
                         <div class="card-footer">
                             <p class="count"></p>
