--- a/especialidades/tecnologia_moda.html
+++ b/especialidades/tecnologia_moda.html
@@ -151,14 +151,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">TRINIDAD VILA</p>
-                            <p class="card_instituto">CIPFP MISLATA</p>
+                            <p class="name">FRANCISCO JOSÉ SOLER</p>
+                            <p class="card_instituto">CIPFP CIUDAD DEL APRENDIZ</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Trinidad,</b> el coordinador técnico del skill de
+                                Ponte en contacto con <b>Francisco,</b> el coordinador técnico del skill de
                                 <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
