--- a/especialidades/tecnologia_moda_vlc.html
+++ b/especialidades/tecnologia_moda_vlc.html
@@ -152,14 +152,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">TRINIDAD VILA</p>
-                            <p class="card_instituto">CIPFP MISLATA</p>
+                            <p class="name">FRANCISCO JOSÉ SOLER</p>
+                            <p class="card_instituto">CIPFP CIUTAT DE L'APRENENT</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Trinidad,</b> el coordinadora tècnica del skill de
+                                Posa't en contacte amb <b>Francisco,</b> el coordinador tècnic del skill de
                                 <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
