--- a/especialidades/atencion_sociosanitaria.html
+++ b/especialidades/atencion_sociosanitaria.html
@@ -135,7 +135,7 @@
                                 Ponte en contacto con <b>Lucía,</b> la coordinadora técnica del skill de
                                 <b>Atención&nbsp;sociosanitaria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.lunaherrero@edu.gva.es" class="mail">l.lunaherrero@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
