--- a/especialidades/carpinteria_vlc.html
+++ b/especialidades/carpinteria_vlc.html
@@ -135,7 +135,7 @@
                             <p class="description">
                                 Posa't en contacte amb <b>Ricardo,</b> el coordinador tècnic del skill de <b>Fusteria</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.arnaujulia@edu.gva.es" class="mail">r.arnaujulia@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
