--- a/especialidades/cocina.html
+++ b/especialidades/cocina.html
@@ -148,7 +148,7 @@
                                 Ponte en contacto con <b>Jacobo,</b> el coordinador técnico del skill de
                                 <b>Cocina</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.olayaabad@edu.gva.es" class="mail">j.olayaabad@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
