--- a/especialidades/cocina_vlc.html
+++ b/especialidades/cocina_vlc.html
@@ -145,7 +145,7 @@
                             <p class="description">
                                 Posa't en contacte amb <b>Jacobo,</b> el coordinador tècnic del skill de <b>Cuina</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.olayaabad@edu.gva.es" class="mail">j.olayaabad@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
