--- a/especialidades/desarrollo_web_vlc.html
+++ b/especialidades/desarrollo_web_vlc.html
@@ -129,7 +129,7 @@
                             <p class="description">Posa't en contacte amb <b>Lorenzo,</b> el coordinador tècnic del skill de
                                 <b>Desenvolupament&nbsp;Web</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.gonzalezgascon@edu.gva.es" class="mail">l.gonzalezgascon@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
