--- a/especialidades/disenyo_animacion_juegos.html
+++ b/especialidades/disenyo_animacion_juegos.html
@@ -127,14 +127,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">ANTONIO JOSÉ</p>
+                            <p class="name">TONI BALANZÁ</p>
                             <p class="card_instituto">IES HENRI MATISSE</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Antonio,</b> el coordinador técnico del skill de
+                                Ponte en contacto con <b>Toni,</b> el coordinador técnico del skill de
                                 <b>Diseño&nbsp;y&nbsp;Animaciones de&nbsp;Juegos&nbsp;3D</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:aj.balanzalliso@edu.gva.es" class="mail">aj.balanzalliso@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
