--- a/especialidades/ebanisteria.html
+++ b/especialidades/ebanisteria.html
@@ -136,14 +136,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">VICENTE ABAD</p>
-                            <p class="card_instituto">IES POLITÈCNIC</p>
+                            <p class="name">ELOY AGUILAR</p>
+                            <p class="card_instituto">IES JAUME I</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Vicente,</b> el coordinador técnico del skill de
+                                Ponte en contacto con <b>Eloy,</b> el coordinador técnico del skill de
                                 <b>Ebanistería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
