--- a/especialidades/electronica.html
+++ b/especialidades/electronica.html
@@ -146,7 +146,7 @@
                                 Ponte en contacto con <b>Fulgencio,</b> el coordinador técnico del skill de
                                 <b>Electrónica</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:f.bermejonavarro@edu.gva.es" class="mail">f.bermejonavarro@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
