--- a/especialidades/estetica.html
+++ b/especialidades/estetica.html
@@ -133,7 +133,7 @@
                                 Ponte en contacto con <b>Inmaculada,</b> la coordinadora técnica del skill de
                                 <b>Estética</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:i.cascales@edu.gva.es" class="mail">i.cascales@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
