--- a/especialidades/estetica_vlc.html
+++ b/especialidades/estetica_vlc.html
@@ -133,7 +133,7 @@
                                 Posa't en contacte amb <b>Inmaculada,</b> la coordinadora tècnica del skill de
                                 <b>Estètica</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:i.cascales@edu.gva.es" class="mail">i.cascales@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
