--- a/especialidades/flosristeria.html
+++ b/especialidades/flosristeria.html
@@ -135,7 +135,7 @@
                                 Ponte en contacto con <b>Lourdes,</b> el coordinadora técnica del skill de
                                 <b>Floristería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:l.mirallesbellver2@edu.gva.es" class="mail">l.mirallesbellver2@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
