--- a/especialidades/fontaneria_calefaccion.html
+++ b/especialidades/fontaneria_calefaccion.html
@@ -151,7 +151,7 @@
                                 Ponte en contacto con <b>Camilo,</b> el coordinador técnico del skill de
                                 <b>Fontanería&nbsp;y&nbsp;calefacción</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:c.gisbertgarcia@edu.gva.es" class="mail">c.gisbertgarcia@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
