--- a/especialidades/instalaciones_electricas_vlc.html
+++ b/especialidades/instalaciones_electricas_vlc.html
@@ -133,9 +133,9 @@
                             <p class="card_instituto">IES ANTONIO JOSÉ CAVANILLES</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>José,</b> el coordinador tècnic del skill de <b>Instal·lacions&nbsp;Elèctriques</b>
+                                Posa't en contacte amb <b>Monti,</b> el coordinador tècnic del skill de <b>Instal·lacions&nbsp;Elèctriques</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.monteagudofajard@edu.gva.es" class="mail">j.monteagudofajard@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
