--- a/especialidades/jardineria_paisajistica.html
+++ b/especialidades/jardineria_paisajistica.html
@@ -136,7 +136,7 @@
                                 Ponte en contacto con <b>Miguel Ángel,</b> el coordinador técnico del skill de
                                 <b>Jardinería&nbsp;Paisajística</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:ma.monteagudomonte@edu.gva.es" class="mail">ma.monteagudomonte@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
