--- a/especialidades/jardineria_paisajistica_vlc.html
+++ b/especialidades/jardineria_paisajistica_vlc.html
@@ -136,7 +136,7 @@
                                 Posa't en contacte amb <b>Miguel Ángel,</b> el coordinador tècnic del skill de
                                 <b>Jardineria&nbsp;Paisatgística</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:ma.monteagudomonte@edu.gva.es" class="mail">ma.monteagudomonte@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
