--- a/especialidades/mecatronica.html
+++ b/especialidades/mecatronica.html
@@ -129,7 +129,7 @@
                                 Ponte en contacto con <b>José Carlos,</b> el coordinador técnico del skill de
                                 <b>Mecatrónica</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jc.deniaabad@edu.gva.es" class="mail">jc.deniaabad@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
