--- a/especialidades/mecatronica_vlc.html
+++ b/especialidades/mecatronica_vlc.html
@@ -132,7 +132,7 @@
                                 Posa't en contacte amb <b>José&nbsp;Carlos,</b> el coordinador tècnic del skill de
                                 <b>Mecatrònica</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:jc.deniaabad@edu.gva.es" class="mail">jc.deniaabad@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
