--- a/especialidades/peluqueria.html
+++ b/especialidades/peluqueria.html
@@ -129,10 +129,10 @@
                             <p class="card_instituto">IES EL CABANYAL</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Rafaela,</b> la coordinadora técnica del skill de
+                                Ponte en contacto con <b>Rafi,</b> la coordinadora técnica del skill de
                                 <b>Peluquería</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.ferrermarquez@edu.gva.es" class="mail">r.ferrermarquez@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
