--- a/especialidades/pintura_automovil.html
+++ b/especialidades/pintura_automovil.html
@@ -123,14 +123,14 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">IGNASI-ENRIC MORANT<br />JUAN BORJA</p>
+                            <p class="name">JUAN BORJA</p>
                             <p class="card_instituto">CIPFP LA COSTERA</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Ignasi-Enric y Juan,</b> los coordinadores técnicos del skill de
+                                Ponte en contacto con <b>Juan,</b> los coordinadores técnicos del skill de
                                 <b>Pintura&nbsp;del&nbsp;Automóvil</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.borjaordinaga@edu.gva.es" class="mail">j.borjaordinaga@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
