--- a/especialidades/refrigeracion_aire-acondicionado.html
+++ b/especialidades/refrigeracion_aire-acondicionado.html
@@ -139,7 +139,7 @@
                                 Ponte en contacto con <b>Rubén,</b> el coordinador técnico del skill de
                                 <b>Refrigeración y Aire Acondicionado</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.airesruiz@edu.gva.es" class="mail">r.airesruiz@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
