--- a/especialidades/refrigeracion_aire-acondicionado_vlc.html
+++ b/especialidades/refrigeracion_aire-acondicionado_vlc.html
@@ -139,7 +139,7 @@
                                 Posa't en contacte amb <b>Rubén,</b> el coordinador tècnic del skill de
                                 <b>Refrigeració i Aire condicionat</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:r.airesruiz@edu.gva.es" class="mail">r.airesruiz@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
