--- a/especialidades/servicios_restaurante_bar.html
+++ b/especialidades/servicios_restaurante_bar.html
@@ -133,7 +133,7 @@
                                 Ponte en contacto con <b>David,</b> el coordinador técnico del skill de
                                 <b>Servicios de restaurante y bar</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:d.traverrodrigo@edu.gva.es" class="mail">d.traverrodrigo@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
