--- a/especialidades/servicios_restaurante_bar_vlc.html
+++ b/especialidades/servicios_restaurante_bar_vlc.html
@@ -132,7 +132,7 @@
                                 Posa't en contacte amb <b>David,</b> el coordinador tècnic del skill de
                                 <b>Serveis de restaurant i bar</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:d.traverrodrigo@edu.gva.es" class="mail">d.traverrodrigo@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
