--- a/especialidades/soldadura.html
+++ b/especialidades/soldadura.html
@@ -128,7 +128,7 @@
                                 Ponte en contacto con <b>Juan,</b> el coordinador técnico del skill de
                                 <b>Soldadura</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.ferrandis@edu.gva.es" class="mail">j.ferrandis@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
