--- a/especialidades/soldadura_vlc.html
+++ b/especialidades/soldadura_vlc.html
@@ -130,7 +130,7 @@
                                 Posa't en contacte amb <b>Juan,</b> el coordinador tècnic del skill de
                                 <b>Soldadura</b>
                             </p>
-                            <a href="mailto:lgonzalez@fpmislata.com" class="mail">lgonzalez@fpmislata.com</a>
+                            <a href="mailto:j.ferrandis@edu.gva.es" class="mail">j.ferrandis@edu.gva.es</a>
                         </div>
 
                         <div class="card-footer">
