cambio centro carpinteria

--- a/especialidades/carpinteria.html
+++ b/especialidades/carpinteria.html
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="name">RICARDO ARNAU</p>
-                                    <p class="card_instituto">IES POLITÈCNIC</p>
+                                    <p class="card_instituto">IES JAUME I</p>
                                     <p class="description">¿Quieres saber más?</p>
                                     <p class="description">
                                         Ponte en contacto con <b>Ricardo,</b> el coordinador técnico del skill de
@@ -132,7 +132,7 @@
                         </div>
                         <div class="card-body">
                             <p class="name">RICARDO ARNAU</p>
-                            <p class="card_instituto">IES POLITÈCNIC</p>
+                            <p class="card_instituto">IES JAUME I</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
                                 Ponte en contacto con <b>Ricardo,</b> el coordinador técnico del skill de
