--- a/especialidades/carpinteria_vlc.html
+++ b/especialidades/carpinteria_vlc.html
@@ -79,7 +79,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="name">RICARDO ARNAU</p>
-                                    <p class="card_instituto">IES POLITÈCNIC</p>
+                                    <p class="card_instituto">IES JAUME I</p>
                                     <p class="description">Vols saber més?</p>
                                     <p class="description">
                                         Posa't en contacte amb <b>Ricardo,</b> el coordinador tècnic del skill de <b>Fusteria</b>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="card-body">
                             <p class="name">RICARDO ARNAU</p>
-                            <p class="card_instituto">IES POLITÈCNIC</p>
+                            <p class="card_instituto">IES JAUME I</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
                                 Posa't en contacte amb <b>Ricardo,</b> el coordinador tècnic del skill de <b>Fusteria</b>
