nombre de eloi ebanisteria

--- a/especialidades/ebanisteria.html
+++ b/especialidades/ebanisteria.html
@@ -85,11 +85,11 @@
                                     <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                                 </div>
                                 <div class="card-body">
-                                    <p class="name">ELOY AGUILAR</p>
+                                    <p class="name">ELOI AGUILAR</p>
                                     <p class="card_instituto">IES JAUME I</p>
                                     <p class="description">¿Quieres saber más?</p>
                                     <p class="description">
-                                        Ponte en contacto con <b>Eloy,</b> el coordinador técnico del skill de
+                                        Ponte en contacto con <b>Eloi,</b> el coordinador técnico del skill de
                                         <b>Ebanistería</b>
                                     </p>
                                     <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
@@ -136,11 +136,11 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">ELOY AGUILAR</p>
+                            <p class="name">ELOI AGUILAR</p>
                             <p class="card_instituto">IES JAUME I</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Eloy,</b> el coordinador técnico del skill de
+                                Ponte en contacto con <b>Eloi,</b> el coordinador técnico del skill de
                                 <b>Ebanistería</b>
                             </p>
                             <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
