--- a/especialidades/ebanisteria_vlc.html
+++ b/especialidades/ebanisteria_vlc.html
@@ -79,11 +79,11 @@
                                     <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                                 </div>
                                 <div class="card-body">
-                                    <p class="name">ELOY AGUILAR</p>
+                                    <p class="name">ELOI AGUILAR</p>
                                     <p class="card_instituto">IES JAUME I</p>
                                     <p class="description">Vols saber més?</p>
                                     <p class="description">
-                                        Posa't en contacte amb <b>Eloy,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
+                                        Posa't en contacte amb <b>Eloi,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
                                     </p>
                                     <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
                                 </div>
@@ -129,11 +129,11 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">ELOY AGUILAR</p>
+                            <p class="name">ELOI AGUILAR</p>
                             <p class="card_instituto">IES JAUME I</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Eloy,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
+                                Posa't en contacte amb <b>Eloi,</b> el coordinador tècnic del skill de <b>Ebenisteria</b>
                             </p>
                             <a href="mailto:e.aguilaraymerich@edu.gva.es" class="mail">e.aguilaraymerich@edu.gva.es</a>
                         </div>
