nombre de paco moda

--- a/especialidades/tecnologia_moda.html
+++ b/especialidades/tecnologia_moda.html
@@ -78,11 +78,11 @@
                                     <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                                 </div>
                                 <div class="card-body">
-                                    <p class="name">FRANCISCO JOSÉ SOLER</p>
+                                    <p class="name">PACO SOLER</p>
                                     <p class="card_instituto">CIPFP CIUDAD DEL APRENDIZ</p>
                                     <p class="description">¿Quieres saber más?</p>
                                     <p class="description">
-                                        Ponte en contacto con <b>Francisco José,</b> el coordinador técnico del skill de
+                                        Ponte en contacto con <b>Paco,</b> el coordinador técnico del skill de
                                         <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                                     </p>
                                     <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
@@ -151,11 +151,11 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">FRANCISCO JOSÉ SOLER</p>
+                            <p class="name">PACO SOLER</p>
                             <p class="card_instituto">CIPFP CIUDAD DEL APRENDIZ</p>
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
-                                Ponte en contacto con <b>Francisco,</b> el coordinador técnico del skill de
+                                Ponte en contacto con <b>Paco,</b> el coordinador técnico del skill de
                                 <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                             </p>
                             <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
