--- a/especialidades/tecnologia_moda_vlc.html
+++ b/especialidades/tecnologia_moda_vlc.html
@@ -79,11 +79,11 @@
                                     <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                                 </div>
                                 <div class="card-body">
-                                    <p class="name">FRANCISCO JOSÉ SOLER</p>
+                                    <p class="name">PACO SOLER</p>
                                     <p class="card_instituto">CIPFP CIUTAT DE L'APRENENT</p>
                                     <p class="description">Vols saber més?</p>
                                     <p class="description">
-                                        Posa't en contacte amb <b>Francisco José,</b> el coordinador tècnic del skill de
+                                        Posa't en contacte amb <b>Paco,</b> el coordinador tècnic del skill de
                                         <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                                     </p>
                                     <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
@@ -152,11 +152,11 @@
                             <img src="../img/user.svg" alt="Profile Image" class="profile-img" />
                         </div>
                         <div class="card-body">
-                            <p class="name">FRANCISCO JOSÉ SOLER</p>
+                            <p class="name">PACO SOLER</p>
                             <p class="card_instituto">CIPFP CIUTAT DE L'APRENENT</p>
                             <p class="description">Vols saber més?</p>
                             <p class="description">
-                                Posa't en contacte amb <b>Francisco,</b> el coordinador tècnic del skill de
+                                Posa't en contacte amb <b>Paco,</b> el coordinador tècnic del skill de
                                 <b>Tecnología&nbsp;de&nbsp;la&nbsp;moda</b>
                             </p>
                             <a href="mailto:fj.solerbenavente@edu.gva.es" class="mail">fj.solerbenavente@edu.gva.es</a>
